# openGLsetUp

./: CMakeLists.txt
src/: glad.c
